# python-testing

./: README.md  pyproject.toml
.github/workflows/: typing.yml
docs/: README.md
docs/single_repo/: .gitignore  index.html
docs/single_repo/tests/: conftest.py
docs/single_repo/tests/unit/: test_add.py  test_multiply.py  test_substruct.py
jisou/: README.md
jisou/order/: test_sum.py  test_sum_after.py
path/monorepo/services/service_b/src/: substruct.py
path/monorepo/services/service_c/tests/: test_multiply.py
path/single_repo/tests/unit/: test_add.py  test_substruct.py
test_doubles/src/: main.py
test_doubles/tests/: test_main.py  test_main_pytest_mock.py
typing/: literal.py  pyproject.toml
typing/src/: literal.py
