[tool.poetry]
name = "python-testing"
version = "0.1.0"
description = ""
authors = ["yuuwatanabe <panyoriokome@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
requests = "^2.26.0"
pytest-mock = "^3.6.1"
mypy = "^0.910"
pytest-html = "^3.1.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
